# wifitex

./: .gitignore  BRUTE_FORCE.md  BRUTE_FORCE_CLI_USAGE.md  BRUTE_FORCE_MASKS.md  Dockerfile  INSTALL.md  INSTALLATION_FIX_SUMMARY.md  INSTALL_CLIENT_MONITORING.md  INSTALL_FIX_USER.md  INSTALL_PACKAGE_ISSUE.md  KARMA_HANDSHAKE_FIX.md  MANIFEST.in  MULTI_INTERFACE_KARMA.md  PMKID.md  README.md  ROCKYOU_WORDLIST_SETUP.md  ROOT_CAUSE_SOLUTION.md  SUDO_IMPROVEMENTS.md  TODO.md  UNIFIED_SCANNING_SOLUTION.md  WORDLIST_AUTO_DETECTION.md  install.sh  install_latest.sh  pyproject.toml  requirements-gui.txt  run-cli.sh  run-gui.sh  setup.py  uninstall.sh  wifitex-gui  wifitex-gui-desktop  wordlist-top4800-probable.txt
cracked/: cracked.json
data/: wifitex-gui.desktop  wifitex-gui.policy
hs/: handshake_IODATA77e1ec2G_34-76-C5-77-E1-EC_2025-10-24T03-31-39.cap
icons/: wifitex.xpm
man/: wifitex-gui.1  wifitex.1
tests/: test_Airmon.py  test_Airodump.py  test_Handshake.py  test_Target.py
wifitex/: __main__.py  args.py  config.py
wifitex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wifitex/attack/: all.py  karma.py  pmkid.py  wpa.py  wps.py
wifitex/data/: wps_pins.csv
wifitex/gui/: __init__.py  __main__.py  components.py  error_handler.py  logger.py  main_window.py  multi_cracker.py  path_utils.py  styles.py  utils.py  wordlist_manager.py
wifitex/model/: attack.py  handshake.py  result.py  target.py
wifitex/tools/: aircrack.py  aireplay.py  airmon.py  airodump.py  bully.py  cowpatty.py  dependency.py  hashcat.py  ifconfig.py  iwconfig.py  john.py  macchanger.py  pixiewps.py  reaver.py  tshark.py  wash.py
wifitex/util/: color.py  crack.py  input.py  process.py  scanner.py
wifitex/wordlists/: README.md  wordlist-top4800-probable.txt
